# ToDoRust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: Deprecated.yml  Publish.yml  Release.yml  Test.yml  test.yml
db/: db.txt
public/: darkmode.css  index.html  main.js  style.css
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/gslayer/: icon.icns
src-tauri/src/: main.rs
